--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,3 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
 body {
-    font-family: arial;
+    font-family: Lato, sans-serif;
+    font-weight: 300;
+}
+
+#hero-image {
+    height: 600px;
+    width: 100%;
+    background: url('../images/hero-image.webp') no-repeat center center;
 }
